force-app/main/default/objects/Contact/fields/Current_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Grade_Level__c</fullName>
    <description>The Grade Level the student is currently enrolled in. Updated when a Grade Enrollment is set to Current.</description>
    <inlineHelpText>The Grade Level the student is currently enrolled in. Updated when a Grade Enrollment is set to Current.</inlineHelpText>
    <label>Current Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Levels</valueSetName>
    </valueSet>
</CustomField>