force-app/main/default/objects/Contact/fields/Highest_Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_of_Education__c</fullName>
    <description>The highest level of education completed by a Contact.</description>
    <inlineHelpText>The highest level of education completed by a Contact.</inlineHelpText>
    <label>Highest Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>Master&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Some College No Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>