force-app/main/default/objects/Contact/fields/Highly_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Highly_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a teacher is classified as highly qualified as defined by state guidelines.</description>
    <inlineHelpText>Indicates that a teacher is classified as highly qualified as defined by state guidelines.</inlineHelpText>
    <label>Highly Qualified</label>
    <type>Checkbox</type>
</CustomField>