force-app/main/default/objects/Contact/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>ID that you can use to manage student information. Typically formatted as a unique alphanumeric value.</description>
    <inlineHelpText>ID that you can use to manage student information. Typically formatted as a unique alphanumeric value.</inlineHelpText>
    <label>Student ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>