force-app/main/default/objects/Contact/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <description>Total number of years of experience for this teacher/staff member.</description>
    <inlineHelpText>Total number of years of experience for this teacher/staff member.</inlineHelpText>
    <label>Years of Experience</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>